--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
-          path: './Docs/Generated/html'
+          path: './Docs/Generated/html/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
