--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install Doxygen
         run: sudo apt install doxygen
 
+      - name: Show files
+        run: ls
+        
       # Create documentation
       - name: Create documentation
         run: ./Docs/Gendoc.sh
