--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,24 +36,20 @@ jobs:
       - name: Install Doxygen
         run: sudo apt install doxygen
 
+      - name: Install Graphviz
+        run: sudo apt install graphviz
+        
       # Create documentation
       - name: Create documentation
         run: ./Docs/Gendoc.sh
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
-      - name: Show files
-        run: ls
-
-      - name: Show files
-        run: ls Docs
-        
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
+          # Upload documentation
           path: './Docs/Generated/html/'
           
       - name: Deploy to GitHub Pages
